--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
   iconsax: ^0.0.8
   animated_bottom_navigation_bar: ^1.3.3
   provider: ^6.1.2
+  flutter_advanced_drawer: ^1.3.6
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
